tests/negative/resource_external_call_without_lock.ora
resource TokenUnit = u256;

extern trait Hook {
    call fn ping(self) -> bool;
}

error ExternalCallFailed;

contract ExternalCallWithoutLock {
    storage var hook: address;
    storage var balances: map<address, Resource<TokenUnit>>;

    pub fn bad(owner: address, amount: TokenUnit) -> !bool | ExternalCallFailed
        modifies balances[owner]
    {
        @create(balances[owner], amount);
        let ok: bool = try external<Hook>(hook, gas: 50000).ping();
        @destroy(balances[owner], amount);
        return Ok(ok);
    }
}
